# python-nkf

./: .gitignore  CHANGES  MANIFEST.in  Makefile  README  README.md  mailman-no-load-iso2022jp.patch  nkf.c  nkf_codecs.py  nkf_phase2b.py  pdm_build.py  pyproject.toml  setup.py  tox.ini
ext/: NKF_python.c
ext/nkf/: nkf.c  nkf.h  nkf_context.h  nkf_internal.h  nkf_private.h
mailman/: mailman-ja-utf8ize.sh  mailman-no-load-iso2022jp.patch  mm_cfg.py
nkf-dist/: nkf.c
src/nkf/: __init__.py  __main__.py  codecs.py  nkf_codec.py
tests/: test_nkf.py  test_nkf_class.py  test_nkf_codecs_override.py  test_pynkf.py
