[project]
name = "nkf"
dynamic = ["version"]
description = "Python Interface to NKF"
authors = [
    {name = "SATOH Fumiyasu", email = "fumiyas@osstech.co.jp"},
]
license = "BSD-3-Clause"
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/fumiyas/python-nkf"
Downloads = "https://pypi.org/project/nkf/"

[project.scripts]
pynkf = "nkf.__main__:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77",
    "setuptools-scm[toml]>=8",
]

[dependency-groups]
dev = [
    "pytest",
    "tox-uv>=1.33",
]

[tool.setuptools_scm]

[[tool.uv.index]]
name = "pypi-nkf"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "test-pypi-nkf"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
